<resources>
    <string name="app_name">NJITResPort</string>
    <string name="ucid">UCID</string>
    <string name="faculty_ucid">Faculty UCID</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_student_profile">Student Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="preferred_email">Preferred Email</string>
    <string name="edit_save">Edit Profile</string>
    <string name="edit_save_opp">Edit Opportunity</string>
    <string name="title_activity_faculty_profile">Faculty Profile</string>
    <string name="faculty_last_name">Faculty Last Name</string>
    <string name="faculty_email">Faculty Email</string>
    <string name="faculty_field_of_expertise">Faculty Field of Expertise</string>
    <string name="faculty_first_name">Faculty First Name</string>
    <string name="faculty_years_at_njit">Faculty Years at NJIT</string>
    <string name="student_name">Student Name</string>
    <string name="faculty_name">Faculty Name</string>
    <string name="student_first_name">Student First Name</string>
    <string name="student_last_name">Student Last Name</string>
    <string name="student_id">Student ID</string>
    <string name="student_email">Student Email</string>
    <string name="student_major">Student Major</string>
    <string name="student_gpa">Student GPA</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gpa">GPA</string>
    <string name="class_standing_text">Class Standing</string>
    <string name="select_upload_fire">Select File... / Upload</string>

    <string-array name="class_rankings">
        <item>Select Class Standing...</item>
    </string-array>

    <string-array name="student_majors">
        <item>Select Major...</item>
    </string-array>

    <string-array name="student_colleges">
        <item>Select College...</item>
    </string-array>

    <string-array name="faculty_colleges">
        <item>Select College...</item>
        <item>Albert Dorman Honors College</item>
        <item>College of Architecture and Design</item>
        <item>College of Science and Liberal Arts</item>
        <item>Martin Tuchman School of Management</item>
        <item>Newark College of Engineering</item>
        <item>Ying Wu College of Computing</item>
    </string-array>

    <string-array name="opportunity_colleges">
        <item>Select College...</item>
        <item>Albert Dorman Honors College</item>
        <item>College of Architecture and Design</item>
        <item>College of Science and Liberal Arts</item>
        <item>Martin Tuchman School of Management</item>
        <item>Newark College of Engineering</item>
        <item>Ying Wu College of Computing</item>
    </string-array>

    <string-array name="opportunity_categories">
        <item>Select Category...</item>
        <item>Paid and No Credit</item>
        <item>Paid and For Credit</item>
        <item>Unpaid and No Credit</item>
        <item>Unpaid and For Credit</item>
    </string-array>

    <string-array name="opportunity_tags">
        <item>Select Tags...</item>
    </string-array>

    <string-array name="buildings">
        <item>Select Building...</item>
        <item>Campbell Hall</item>
        <item>Campus Center</item>
        <item>Robert Van Houten Library (CAB)</item>
        <item>Central King Building</item>
        <item>Colton Hall</item>
        <item>Council for Higher Ed.</item>
        <item>Cullimore Hall</item>
        <item>Cypress Residence Hall</item>
        <item>Dorman Honors Residence Hall</item>
        <item>Eberhardt Hall</item>
        <item>Electrical and Computer Engineering Center</item>
        <item>Enterprise Development Center 2</item>
        <item>Enterprise Development Center 3</item>
        <item>Faculty Memorial Hall</item>
        <item>Facilities Service Building</item>
        <item>Fenster Hall</item>
        <item>Fleischer Athletic Center</item>
        <item>Greek Way 05-07</item>
        <item>Greek Way 09-11</item>
        <item>Greek Way 13-15</item>
        <item>Greek Way 17-19</item>
        <item>Greek Way 21-23</item>
        <item>Guttenberg Information Technology Center</item>
        <item>Kupfrian Hall</item>
        <item>Laurel Residence Hall</item>
        <item>Laurel Residence Hall Extension</item>
        <item>Life Sciences and Engineering Center</item>
        <item>Mechanical Engineering Center</item>
        <item>Microelectronics Center</item>
        <item>Naimoli Family Athletic Center</item>
        <item>Oak Residence Hall</item>
        <item>Parking Deck/Student Mall</item>
        <item>Redwood Residence Hall</item>
        <item>Science and Technology Park Garage</item>
        <item>Specht Building</item>
        <item>Tiernan Hall</item>
        <item>Wellness and Events Center</item>
        <item>Weston Hall</item>
        <item>York Center</item>
    </string-array>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="type_your_message_here">Type your message here!</string>
    <string name="if_you_have_any_questions_concerns_comments_ideas_or_need_any_help_just_type_up_your_message_and_send_it_over_to_us_we_d_be_happy_to_help">If you have any questions, concerns, comments, ideas, or need any help, just type up your message and send it over to us! We\'d be happy to help.</string>
    <string name="contactify">Contactify</string>
    <string name="title_activity_contact_us_student">Contact Us</string>
    <string name="title_activity_create_opportunity">Create an Opportunity</string>
    <string name="create">Create!</string>
    <string name="opportunity_name">Opportunity Name</string>
    <string name="details_requirements">Details / Requirements</string>
    <string name="expected_hours_per_week">Hours</string>
    <string name="number_of_students">Number of Students</string>
    <string name="job_title">Job Title</string>
    <string name="title_activity_faculty_view_applicant">Viewing Applicant</string>
    <string name="title_activity_faculty_view_app_opp_list">View Applicants</string>
    <string name="title_activity_faculty_view_app_list">Viewing Your Opportunities</string>
    <string name="title_activity_student_opportunities_list">View Opportunities at NJIT</string>
    <string name="title_activity_student_opportunity_view">Viewing Opportunity Details</string>
    <string name="title_activity_student_applications_list">View Submitted Applications</string>
    <string name="title_activity_student_application_view">Viewing Application Details</string>
    <string name="show_interest">Show Interest</string>
    <string name="contact_faculty">Contact Faculty</string>
    <string name="contact">Contact</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_ucid">Enter Your UCID</string>
    <string name="college">College</string>
    <string name="major">Major</string>
    <string name="honors">Honors</string>
    <string name="click_to_upload_resume">Click To Upload Resume</string>
    <string name="field_of_study">Field of Study</string>
    <string name="years_experience">Years of Experience</string>
    <string name="office">Office #</string>
    <string name="office_text">Office</string>
    <string name="description">Description</string>
    <string name="position">Position</string>
    <string name="number_of_students_0_if_no_limit">Number of Students (0 if no limit)</string>
    <string name="min_gpa">Minimum GPA</string>
    <string name="no_credit">No Credit</string>
    <string name="paid">Paid</string>
    <string name="student_class_standing">Student Class Standing</string>
    <string name="student_college">Student College</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="title_activity_edit_opportunity">Viewing Your Opportunities</string>
    <string name="title_activity_edit_specific_opp">Edit Opportunity</string>
    <string name="example_tag">Example Tag</string>

</resources>
