<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundGray"
        android:fillViewport="true"
        tools:context=".FacultyProfile">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="95dp"
                android:background="@color/colorPrimary"
                android:text="@string/edit_save"
                android:onClick="updateProfile"
                android:textColor="@android:color/white"/>

            <EditText
                android:id="@+id/editText15"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_below="@+id/button3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_textbox_faded"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingHorizontal="10dp"
                android:hint="@string/faculty_first_name"/>

            <EditText
                android:id="@+id/editText16"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_below="@+id/editText15"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_textbox_faded"
                android:ems="10"
                android:hint="@string/faculty_last_name"
                android:inputType="textPersonName"
                android:paddingHorizontal="10dp"/>

            <EditText
                android:id="@+id/editText17"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_below="@+id/editText16"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_textbox_faded"
                android:ems="10"
                android:hint="@string/faculty_email"
                android:inputType="textPersonName"
                android:paddingHorizontal="10dp"/>

            <EditText
                android:id="@+id/editText18"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_below="@+id/editText17"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_textbox_faded"
                android:ems="10"
                android:hint="@string/faculty_field_of_expertise"
                android:inputType="textPersonName"
                android:paddingHorizontal="10dp"/>

            <EditText
                android:id="@+id/editText19"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_below="@+id/editText18"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_textbox_faded"
                android:ems="10"
                android:hint="@string/faculty_years_at_njit"
                android:inputType="textPersonName"
                android:paddingHorizontal="10dp"/>

            <EditText
                android:id="@+id/editText21"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:layout_alignTop="@+id/editText19"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_textbox_faded"
                android:ems="10"
                android:hint="Office #"
                android:inputType="textPersonName"
                android:paddingHorizontal="10dp"/>

            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_alignLeft="@+id/button3"
                android:layout_alignStart="@+id/button3"
                android:layout_below="@+id/editText21"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_textbox_faded"
                android:entries="@array/faculty_colleges"/>

        </RelativeLayout>
    </ScrollView>