<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    android:fillViewport="true"
    tools:context=".ContactUsStudent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="99dp"
            android:text="@string/if_you_have_any_questions_concerns_comments_ideas_or_need_any_help_just_type_up_your_message_and_send_it_over_to_us_we_d_be_happy_to_help"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/msg"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_textbox_shadows"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/type_your_message_here"
            android:inputType="textMultiLine"
            android:paddingHorizontal="10dp"
            android:paddingVertical="10dp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/msg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_textbox_blue_outline"
            android:text="@string/contactify"
            android:onClick="send"
            android:textColor="@color/contactColor" />
    </RelativeLayout>
</ScrollView>
