<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:background="@color/backgroundWhite"
    android:fillViewport="true"
    tools:context=".StudentApplicationView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/view_application_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10.0sp"
            android:text="@string/opportunity_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/view_application_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/view_application_name_text"
            android:layout_alignStart="@+id/view_application_name_text"
            android:layout_below="@+id/view_application_name_text"
            android:layout_marginBottom="13dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/rounded_textbox_faded_shadows"
            android:ems="10"
            android:hint="@string/opportunity_name"
            android:padding="10dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/view_application_college_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/view_application_name"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/college"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/view_application_college"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/view_application_college_text"
            android:layout_alignStart="@+id/view_application_college_text"
            android:layout_below="@+id/view_application_college_text"
            android:layout_marginBottom="13dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/rounded_textbox_faded_shadows"
            android:ems="10"
            android:hint="@string/college"
            android:padding="10dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/view_application_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/view_application_college"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/view_application_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/view_application_description_text"
            android:layout_alignStart="@+id/view_application_description_text"
            android:layout_below="@+id/view_application_description_text"
            android:layout_marginBottom="13dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/rounded_textbox_faded_shadows"
            android:ems="10"
            android:maxLines="5"
            android:scrollbars="vertical"
            android:hint="@string/description"
            android:padding="10dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/view_application_faculty_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/view_application_description"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/faculty_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/view_application_faculty_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/view_application_faculty_name_text"
            android:layout_alignStart="@+id/view_application_faculty_name_text"
            android:layout_below="@+id/view_application_faculty_name_text"
            android:layout_marginBottom="13dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/rounded_textbox_faded_shadows"
            android:ems="10"
            android:hint="@string/faculty_name"
            android:padding="10dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/view_application_faculty_ucid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/view_application_faculty_name"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/faculty_ucid"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/view_application_faculty_ucid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/view_application_faculty_ucid_text"
            android:layout_alignStart="@+id/view_application_faculty_ucid_text"
            android:layout_below="@+id/view_application_faculty_ucid_text"
            android:layout_marginBottom="13dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/rounded_textbox_faded_shadows"
            android:ems="10"
            android:hint="@string/faculty_ucid"
            android:padding="10dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/view_application_faculty_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_application_faculty_ucid"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:padding="10dp"
            android:text="Accepted!"
            android:textAlignment="center"
            android:textColor="@color/accepted"
            android:textSize="18sp" />

        <Button
            android:id="@+id/contactFaculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/view_application_faculty_ucid_text"
            android:layout_alignStart="@+id/view_application_faculty_ucid_text"
            android:layout_below="@+id/view_application_faculty_status"
            android:layout_marginBottom="13dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/rounded_textbox_blue_outline"
            android:ems="10"
            android:padding="10dp"
            android:text="Contact Faculty"
            android:onClick="contactFaculty"
            android:textColor="@color/contactColor"
            android:textSize="18sp" />

    </RelativeLayout>
</ScrollView>
